--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.85.3",
     "aos": "^2.3.4",
+    "axios": "^1.11.0",
     "firebase": "^12.1.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
