--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@tanstack/react-query": "^5.85.3",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
     "firebase": "^12.1.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
