--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-leaflet": "^5.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.8.0",
+    "recharts": "^3.1.2",
     "sweetalert2": "^11.22.3",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
